# VAF

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMERCIAL.md  CONTRIBUTING.md  LICENSE  LICENSING.md  NOTICE  README.md  SECURITY.md  Start VAF.command  THIRD_PARTY.md  check_syntax.ps1  check_users.py  debug_env.py  debug_icon.py  debug_model_simple.py  debug_models.py  debug_namespace.py  debug_netstat.py  demo_sandbox.py  demo_sandbox_extended.py  docker-compose.memory.yml  empire_of_the_sun_we_are_the_people_analysis.txt  install.bat  install.ps1  install.sh  launch_vaf.scpt  list_mics.py  pyproject.toml  repro_stream.py  requirements.txt  ruff.toml  run_vaf.bat  run_vaf.sh  script.js  setup.py  start_vaf.sh  (+13 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: _test.yml  ci-nightly.yml  ci.yml  publish-testpypi.yml  release.yml
docker/browser/: Dockerfile  entrypoint.sh
docker/tts-multilang/: Dockerfile  app.py  models.json
docs/: ABOUT.md  ACTION_TAG.md  API_INTEGRATION.md  ARCHITECTURE.md  AUTOMATIONS.md  AgentAvatar.md  BROWSER_AGENT.md  CALENDAR_INTEGRATION.md  CODER_ARCHITECTURE.md  CONNECTIONS.md  CONTEXT_COMPRESSION_FLOW.md  CONTEXT_GLUE.md  CONTEXT_MANAGEMENT.md  CORE_AGENT.md  DEBUGGING.md  DESIGN.md  DOCKER_SERVICES.md  DOCUMENT_CREATION.md  DOCUMENT_EDITOR_NATIVE_DOCX.md  DOCUMENT_READING.md  DYNAMIC_MODEL_SELECTION.md  EMBEDDING.md  FAQ.md  FRONT_OFFICE.md  GATEWAY.md  GITHUB_INTEGRATION.md  I18N.md  LAZY_LOAD_RAM_ANALYSIS.md  LIBRARIAN_CONFIGURATION.md  LINUX_SETUP.md  LLM_BACKEND_FACTS.md  MCP_INTEGRATION.md  MEMORY_SYSTEM.md  MODELL_UND_PROVIDER_WECHSEL.md  NETWORK_FEATURES.md  NETWORK_TAB.md  NGINX_REVERSE_PROXY.md  OBSERVABILITY.md  PROCESS_MANAGEMENT.md  README.md  (+31 more)
docs/agents/: ACTION_TAG.md  AGENT_LOOP.md  BROWSER_AGENT.md  CODER_ARCHITECTURE.md  FRONT_OFFICE.md  MCP_INTEGRATION.md  RESEARCH_AGENT.md  RESEARCH_AND_DOCUMENT_WORKFLOWS.md  SKILLS.md  SUBAGENT_FILE_EXTRACTION.md  SUBAGENT_IPC.md  THINKING_WORKSPACE.md  TOOLS_CATALOG.md  TOOL_INPUT_REPAIR.md  TOOL_ROUTER_ARCHITECTURE.md  TOOL_SUPERVISION.md  Thinking-Mode.md  VOICE_AGENT.md  VOICE_REFLEX.md  WORKFLOW_SELECTION.md
docs/animations/: README.md
docs/documents/: DOCUMENT_CREATION.md  DOCUMENT_EDITOR_NATIVE_DOCX.md  DOCUMENT_READING.md  LIBRARIAN_CONFIGURATION.md
docs/integrations/: CALENDAR_INTEGRATION.md  CONNECTIONS.md  GITHUB_INTEGRATION.md  TELEGRAM_INTEGRATION.md  WHATSAPP_INTEGRATION.md
docs/llm/: API_INTEGRATION.md  DYNAMIC_MODEL_SELECTION.md  LAZY_LOAD_RAM_ANALYSIS.md  LLM_BACKEND_FACTS.md  MODEL_AND_PROVIDER_SWITCHING.md  PROVIDER_MODES.md
docs/memory/: CONTEXT_COMPRESSION_FLOW.md  CONTEXT_GLUE.md  CONTEXT_MANAGEMENT.md  MEMORY_SYSTEM.md  SELF_LEARNING.md  SESSION_CONTEXT_SYSTEM_PROMPT.md  SESSION_MANAGEMENT.md  SOUL_SYSTEM.md  USER_IDENTITY.md  WHARE_WANANGA.md
docs/platform/: ABOUT.md  AUTOMATIONS.md  I18N.md  LINUX.md  MACOS.md  STARTUP_SPLASH.md  SYSTEM_TRAY.md  TRANSLATION_SYSTEM.md  UUID.md  VOCABULARY_BOOK.md  WINDOWS.md
docs/security/: SANDBOXING.md  SANDBOX_MODULES.md  SECURITY_DASHBOARD.md  USER_ISOLATION.md
docs/setup/: CONFIG_SCHEMA.md  DOCKER_SERVICES.md  FIRST_RUN.md  INSTALLATION_GUIDE.md  LINUX_SETUP.md  MACOS_SETUP.md  NETWORK_FEATURES.md  NGINX_REVERSE_PROXY.md  PROCESS_MANAGEMENT.md  RELEASING.md  SERVER_MODE.md  WINDOWS_SETUP.md  nginx-vaf-https.conf.example
docs/web-ui/: AgentAvatar.md  DARKMODE.md  DESIGN.md  LIGHTMODE.md  MOBILE_UI.md  NETWORK_TAB.md  SPEECH_FEATURES.md  WEBUI_WEBSOCKET_FLOW.md  WEB_UI.md  WINDOW_TILING_DESIGN.md  WORKFLOW_UI_COMPONENTS.md
examples/: 01_hello_agent.py  02_streaming_and_events.py  03_stream_json_subprocess.py  04_inline_tool.py  05_chatbot_with_memory.py  06_custom_persona.py  README.md
examples/vaf_example_tool/: pyproject.toml
examples/vaf_example_tool/vaf_example_tool/: __init__.py  tools.py
packaging/install/: bootstrap.ps1  bootstrap.sh
scripts/: README.md  attachment_embed_mem_profile_5s.py  attachment_rag_stage_test.py  attachment_rag_vector_diagnose.py  attachment_rag_vector_mem_profile_5s.py  attachment_rag_vector_ramp_test.py  attachment_rag_vector_supervised_5s.py  attachment_vector_mem_profile_5s.py  bump_version.py  check_doc_links.py  check_license_headers.py  check_soul_prompt.py  check_users.py  ci_check.sh  clear_user_data.py  create_app_shortcut.py  fix_venv.py  generate_vocab.py  init-memory-db.sql  list_mics.py  macos_mic_plist.sh  migrate_users_to_scopes.py  reembed_memories.py  repro_stream.py  rls_app_role.sql  rls_disable.sql  rls_enforce.sql  setup_mac.sh  setup_win.ps1  tray_supervisor.sh  update_icons.py
tests/: README.md  conftest.py  list_tools_cli.py  test_agent_features.py  test_agent_loop_runaway.py  test_analyze_image_path.py  test_anthropic_provider.py  test_anti_spin_guard.py  test_api_backend_failover.py  test_api_backend_tool_choice.py  test_apple_model_selection.py  test_auth_cookie_alignment.py  test_auth_db_startup_race.py  test_auth_middleware.py  test_autocontinue_question_brake.py  test_automation_delivery.py  test_automation_timeout.py  test_automation_workflow_json.py  test_bindable_port.py  test_browser_agent_stop.py  test_browser_entrypoint_supervise.py  test_channel_registry_sync.py  test_chat_while_subagent.py  test_cloud_credentials.py  test_coder_content_cleanup.py  test_coder_enforcement.py  test_coder_path_extraction.py  test_coder_provider_map.py  test_coder_state_payload.py  test_coder_task_resume.py  test_coder_todo_normalization.py  test_credential_store.py  test_custom_tools_registry.py  test_dark_mode_protected_surfaces.py  test_data_explorer.py  test_db_reconcile.py  test_display_platform.py  test_doc_phase.py  test_document_formatting.py  test_document_plan_robustness.py  (+169 more)
tmp/: diag_progress.txt
vaf/: README.md  __init__.py  framework.py  main.py  markers.py  startup_logger.py  tray.py  version.py
web/: README.md  next.config.js  package-lock.json  package.json  proxy.ts  tailwind.config.ts  tsconfig.tsbuildinfo
(+601 files in other folders)
